Tue Sep 30 18:46:31 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_typelib.c: use typed data.

Tue Sep 30 09:51:46 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* common.mk: fixed broken reference of update-config_files task

Mon Sep 29 22:54:51 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (append_wstr): set expanded length, not length of
	  appended string.  fix "probable buffer overflow" bug.
	  [ruby-core:65317] [Bug #10304]

	* string.c (str_make_independent_expand): drop NOFREE flag after
	  reallocation, static buffer is not pointed anymore.
	  [ruby-core:65317] [Bug #10304]

Sun Sep 28 23:59:17 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gc.c (rb_gcdebug_print_obj_condition): use RVALUE_REMEMBERED
	  because GET_HEAP_REMEMBERSET_BITS is obsoleted.

Sun Sep 28 11:14:14 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* common.mk: Created new target update-unicode to download
	  some Unicode data files.

Fri Sep 26 15:03:19 2014  Masaki Matsushita <glass.saga@gmail.com>

	* lib/uri/rfc3986_parser.rb: raise URI::InvalidURIError when
	  uri doesn't respond to #to_str. [ruby-core:64453] [Bug #10150]

	* test/uri/test_parser.rb: test for above.

Sat Sep 27 10:31:48 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gems/bundled_gems: upgraded to power_assert 0.1.4.

Fri Sep 26 12:52:36 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_write): ASCII-8BIT StringIO
	  should be writable any encoding strings, without conversion.
	  [ruby-core:65240] [Bug #10285]

Fri Sep 26 05:21:01 2014  Eric Wong  <e@80x24.org>

	* object.c (rb_class_real): do not dereference 0 VALUE

	* test/ruby/test_module.rb (test_inspect_segfault):
	  Test case and bug report by Thomas Stratmann.
	  [ruby-core:65214] [Bug #10282]

Fri Sep 26 05:12:10 2014  Eric Wong  <e@80x24.org>

	* man/ruby.1: document stack size env variables
	  [Feature #10197]

Thu Sep 25 19:37:34 2014  Eric Wong  <e@80x24.org>
